非同期処理まで完了しました

--- a/stv_project_2.4.3/stv_project_2.4.3/Base.lproj/Main.storyboard
+++ b/stv_project_2.4.3/stv_project_2.4.3/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-956" y="-322.48875562218893"/>
+            <point key="canvasLocation" x="-711" y="-461"/>
         </scene>
     </scenes>
 </document>
